# distill-tunbert

./: README.md  main.py  pyproject.toml
notebooks/: data_evaluation.ipynb  data_preparation.ipynb  distillation.ipynb  tarc_corpus.txt
notebooks/hamzabouajila/Sample_Tunisiya_Dataset/: .gitattributes  search_results.xlsx
