[project]
name = "distill-tunbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
